test_regress/t/t_tagged_case.out
%Warning-SHORTREAL: t/t_tagged_case.v:78:5: Unsupported: shortreal being promoted to real (suggest use real instead)
   78 |     shortreal ShortRealVal;
      |     ^~~~~~~~~
                    ... For warning description see https://verilator.org/warn/SHORTREAL?v=latest
                    ... Use "/* verilator lint_off SHORTREAL */" and lint_on around source to disable this message.
%Warning-ASCRANGE: t/t_tagged_case.v:33:9: Ascending bit range vector: left < right of bit range: [0:31]
                                         : ... note: In instance 't'
   33 |     bit [0:31]    Word32LittleEndian;    
      |         ^
                   ... For warning description see https://verilator.org/warn/ASCRANGE?v=latest
                   ... Use "/* verilator lint_off ASCRANGE */" and lint_on around source to disable this message.
%Error: t/t_tagged_case.v:42:17: Unpacked data type 'int$[0:3]' in packed struct/union (IEEE 1800-2023 7.2.1)
                               : ... note: In instance 't'
   42 |     int         Arr[4];                  
      |                 ^~~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: t/t_tagged_case.v:62:13: Unpacked data type 'chandle' in packed struct/union (IEEE 1800-2023 7.2.1)
                               : ... note: In instance 't'
   62 |     chandle Handle;
      |             ^~~~~~
%Error: t/t_tagged_case.v:68:15: Unpacked data type 'class{}TestClass' in packed struct/union (IEEE 1800-2023 7.2.1)
                               : ... note: In instance 't'
   68 |     TestClass Obj;
      |               ^~~
%Error: t/t_tagged_case.v:77:15: Unpacked data type 'real' in packed struct/union (IEEE 1800-2023 7.2.1)
                               : ... note: In instance 't'
   77 |     real      RealVal;
      |               ^~~~~~~
%Error: t/t_tagged_case.v:78:15: Unpacked data type 'real' in packed struct/union (IEEE 1800-2023 7.2.1)
                               : ... note: In instance 't'
   78 |     shortreal ShortRealVal;
      |               ^~~~~~~~~~~~
%Error: t/t_tagged_case.v:84:12: Unpacked data type 'string' in packed struct/union (IEEE 1800-2023 7.2.1)
                               : ... note: In instance 't'
   84 |     string StrVal;
      |            ^~~~~~
%Error: t/t_tagged_case.v:99:11: Unpacked data type 'event' in packed struct/union (IEEE 1800-2023 7.2.1)
                               : ... note: In instance 't'
   99 |     event EvtVal;
      |           ^~~~~~
%Warning-WIDTHEXPAND: t/t_tagged_case.v:163:42: Operator ASSIGN expects 32 bits on the Assign RHS, but Assign RHS's VARREF 'b' generates 8 bits.
                                              : ... note: In instance 't'
  163 |       tagged Byte8NonZeroLSB .b : result = b;
      |                                          ^
                      ... For warning description see https://verilator.org/warn/WIDTHEXPAND?v=latest
                      ... Use "/* verilator lint_off WIDTHEXPAND */" and lint_on around source to disable this message.
%Warning-WIDTHEXPAND: t/t_tagged_case.v:166:21: Operator NEQCASE expects 32 bits on the RHS, but RHS's CONST '8'ha5' generates 8 bits.
                                              : ... note: In instance 't'
  166 |     do if ((result) !== (8'hA5)) begin $write("%%Error: %s:%0d:  got=%0x exp=%0x (%s !== %s)\n", "t/t_tagged_case.v",166, (result), (8'hA5), "result", "8'hA5"); $stop; end while(0);;
      |                     ^~~
%Warning-WIDTHEXPAND: t/t_tagged_case.v:192:44: Operator ASSIGN expects 32 bits on the Assign RHS, but Assign RHS's VARREF 'a' generates 10 bits.
                                              : ... note: In instance 't'
  192 |       tagged Jmp (tagged JmpU .a) : result = a;
      |                                            ^
%Warning-WIDTHEXPAND: t/t_tagged_case.v:193:59: Operator ASSIGN expects 32 bits on the Assign RHS, but Assign RHS's VARREF 'a' generates 10 bits.
                                              : ... note: In instance 't'
  193 |       tagged Jmp (tagged JmpC '{cc:.c, addr:.a}) : result = a;
      |                                                           ^
%Error: Exiting due to
